--- a/css/style.css
+++ b/css/style.css
@@ -123,13 +123,20 @@ font-style: normal;
 }
 .footer {
     background-color: #2F303A;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 .name {
     margin-top: 30px;
     margin-bottom: 10px;
     text-align: center;
 }
-
+.padding-footer {
+    width: 1170px;
+    justify-content: space-between;
+    margin: 0 auto;
+    margin-bottom: 20px;
+}
 .logo-footer {
     font-family: Raleway;
     font-weight: 700;
@@ -137,7 +144,6 @@ font-style: normal;
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: #ffff;
-    padding-top: 50px;
 }
 .top-padding {
     padding-top: 94px;
@@ -234,6 +240,6 @@ border-bottom: none;
     color: rgba(255, 255, 255, 0.6);
     padding-bottom: 60px;
 }
-.b-m {
-    padding-bottom: 60px;
+.pad {
+    padding-bottom: 9px;
 }
